@@ -241,6 +241,17 @@
         <Down>UseCollectible(11089)</Down>
       </Action>
     </Category>
+    <Category name="|ceb00f1-tralce's Keybinds - Random Mounts-|r">
+			<Action name="Mount_Player">
+				<Down>tralceCollectibles.MountPlayer()</Down>
+			</Action>
+      <Action name="Mount_Random">
+        <Down>SetRandomMountType(2)</Down>
+      </Action>
+      <Action name="Mount_RandomFav">
+        <Down>SetRandomMountType(1)</Down>
+      </Action>
+    </Category>
       <!--
       <Action name="">
         <Down>UseCollectible()</Down>
